# gurobi

./: .gitignore  CMakeLists.txt  Makefile  download_gurobi.pl  install_prereqs.sh
